--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,27 @@
 
     <application
             android:allowBackup="true"
-            android:fullBackupContent="@xml/backup_rules"
-            tools:targetApi="33"
             android:dataExtractionRules="@xml/data_extraction_rules"
-            android:label="@string/app_name"
+            android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.YUTA" />
+            android:theme="@style/Theme.YUTA"
+            tools:targetApi="33">
+        <activity
+                android:name=".ui.LoginActivity"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:exported="true">
+        </activity>
+    </application>
 
 </manifest>
