--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,9 @@ android {
         viewBinding true
     }
 
-    allprojects {
-        tasks.withType(JavaCompile).tap {
-            configureEach {
-                options.compilerArgs << "-Xlint:deprecation"
-            }
+    tasks.withType(JavaCompile).tap {
+        configureEach {
+            options.compilerArgs << "-Xlint:deprecation"
         }
     }
 }
@@ -48,5 +46,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.7.5'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.santalu:maskara:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
