--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.santalu:maskara:1.0.0'
+    implementation 'com.vanniktech:android-image-cropper:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
