--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.YUTA"
+            android:windowSoftInputMode="stateAlwaysHidden"
             tools:targetApi="34">
         <activity
                 android:name=".ui.LoginActivity"
