fix post requests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,7 @@
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:exported="true"
-                android:theme="@style/Theme.YUTA.GradientStatusBar" />
+                android:exported="true" />
     </application>
 
 </manifest>
