--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.YUTA"
+            android:enableOnBackInvokedCallback="true"
             tools:targetApi="34">
         <activity
                 android:name=".ui.LoginActivity"
