--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
 
         <activity
                 android:name=".ui.LoginActivity"
-                android:exported="true">
+                android:exported="true"
+                android:theme="@style/Theme.YUTA.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
