--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:theme="@style/Theme.YUTA"
+            android:theme="@style/Theme.YUTA.Main"
             android:enableOnBackInvokedCallback="true"
             tools:targetApi="34">
 
@@ -39,7 +39,7 @@
         <activity
                 android:name=".ui.LoginActivity"
                 android:exported="true"
-                android:theme="@style/Theme.YUTA.Login">
+                android:theme="@style/Theme.YUTA.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
