--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 org.gradle.warning.mode=all
 android.suppressUnsupportedCompileSdk=35
+kotlin.code.style=official
