--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,24 +33,31 @@ android {
     }
 }
 
+ext {
+    lifecycleVersion = '2.8.4'
+    navigationVersion = '2.7.7'
+    lombokVersion = '1.18.34'
+    daggerVersion = '2.52'
+}
+
 dependencies {
-    compileOnly 'com.google.dagger:dagger:2.52'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.52'
+    compileOnly "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
     //noinspection AnnotationProcessorOnCompilePath
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    kapt "org.projectlombok:lombok:$lombokVersion"
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.github.santalu:maskara:1.0.0'
