--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,6 +38,8 @@ android {
 dependencies {
     implementation project(':domain')
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
     implementation "com.squareup.okhttp3:okhttp:${versions.okHttp}"
