Move dependency versions to version.gradle

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,7 +38,7 @@ android {
 dependencies {
     implementation project(':domain')
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
 
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
