--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,28 +1,34 @@
 name: Build & Publish Debug APK
 
 on:
- push:
-  branches:
-   - master
+  push:
+    branches:
+      - master
    
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: set up JDK
+      uses: actions/setup-java@v3
       with:
-        java-version: 21
+        java-version: 17
     - name: Make Gradle executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
     - name: Build Debug APK
       run: ./gradlew assembleDebug
+    - name: Debugging Environment Variables
+      run: |
+        echo "JAVA_HOME: $JAVA_HOME"
+        echo "APP_FOLDER: $APP_FOLDER"
+        echo "RELEASE_TITLE: $RELEASE_TITLE"
+        echo "GITHUB_TOKEN: ${{ secrets.TOKEN }}"
     - name: Releasing using GitHub
       uses: nightcrawler-/action-release-apk@1.0.2
       env:
-       GITHUB_TOKEN: ${{ secrets.TOKEN }}
-       APP_FOLDER: app
-       RELEASE_TITLE: New Build
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        APP_FOLDER: app
+        RELEASE_TITLE: New Build
