--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,8 @@ jobs:
     - name: set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: 17
+        distribution: 'adopt'
+        java-version: 21
     - name: Make Gradle executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
