--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         distribution: 'adopt'
@@ -21,12 +21,8 @@ jobs:
       run: ./gradlew build
     - name: Build Debug APK
       run: ./gradlew assembleDebug
-    - name: Debugging Environment Variables
-      run: |
-        echo "JAVA_HOME: $JAVA_HOME"
-        echo "APP_FOLDER: $APP_FOLDER"
-        echo "RELEASE_TITLE: $RELEASE_TITLE"
-        echo "GITHUB_TOKEN: ${{ secrets.TOKEN }}"
+    - name: Configure Git safe directory
+      run: git config --global --add safe.directory /github/workspace
     - name: Releasing using GitHub
       uses: nightcrawler-/action-release-apk@1.0.2
       env:
