--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,18 +1,20 @@
 name: Build & Publish Debug APK
-
 on:
   push:
     branches:
       - master
-   
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    - name: Configure Git safe directory
+      run: git config --global --add safe.directory /github/workspace
     - name: Set up JDK
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'adopt'
         java-version: 21
     - name: Make Gradle executable
       run: chmod +x ./gradlew
