--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,16 +31,16 @@ jobs:
         VERSION=$(grep 'version ' app/build.gradle | awk '{print $2}' | tr -d "'\"")
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Create Release
+    - name: Create release
       id: create_release
       uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ env.VERSION }}
         release_name: Release ${{ env.VERSION }}
         draft: false
         prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
     - name: Upload APK
       uses: actions/upload-release-asset@v1
