--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,15 +28,16 @@ jobs:
     - name: Extract version from build.gradle
       id: extract_version
       run: |
-        VERSION=$(grep 'version ' app/build.gradle | awk '{print $2}' | tr -d "'\"")
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        VERSION=$(grep 'versionName' app/build.gradle | awk -F"'" '{print $2}')
+        echo "VERSION=${VERSION}" >> $GITHUB_ENV
+
 
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ env.VERSION }}
-        release_name: Release ${{ env.VERSION }}
+        tag_name: v${{ env.VERSION }}
+        release_name: Release v${{ env.VERSION }}
         draft: false
         prerelease: false
       env:
