Update release strategy

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,13 +1,16 @@
 name: Build & Publish Debug APK
+
 on:
   push:
     branches:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up JDK
       uses: actions/setup-java@v3
@@ -30,21 +33,19 @@ jobs:
         VERSION=$(grep 'versionName' app/build.gradle | awk -F"'" '{print $2}')
         echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
+    - name: Install GitHub CLI
+      run: sudo apt-get install gh
+
+    - name: Authenticate GitHub CLI
+      run: gh auth login --with-token <<< ${{ secrets.GITHUB_TOKEN }}
+
     - name: Create release
       id: create_release
-      uses: actions/create-release@v1
-      with:
-        tag_name: v${{ env.VERSION }}
-        release_name: Release v${{ env.VERSION }}
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh release create v${{ env.VERSION }} ./app/build/outputs/apk/debug/app-debug.apk \
+        -t "Release v${{ env.VERSION }}" \
+        -n "Release notes for v${{ env.VERSION }}"
 
-    - name: Upload APK
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./app/build/outputs/apk/debug/app-debug.apk
-        asset_name: app-debug.apk
-        asset_content_type: application/vnd.android.package-archive
+    - name: Display release URL
+      run: |
+        echo "Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
