--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,20 +1,21 @@
 name: Build & Publish Debug APK
 on:
   push:
-    branches:
-      - master
+    branches: [ 'master', 'develop' ]
+    paths: [ 'pom.xml' ]
+  workflow_dispatch:
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4.1.7
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4.2.2
         with:
-          distribution: 'adopt'
-          java-version: 21
+          java-version: '21'
+          distribution: 'temurin'
 
       - name: Make Gradle executable
         run: chmod +x ./gradlew
